created and have almost proven a lemma with the consequence of showing why a 2 step flag variety is a subvariety in a product of grassmannians. Complete proof tomorrow.

--- a/preamble.sty
+++ b/preamble.sty
@@ -123,6 +123,9 @@
 \newcommand{\naturals}{\mathbb{N}}
 \newcommand{\field}{\mathbf{k}}
 
+% GRASSMANNIANS
+\newcommand{\GR}[2][]{\operatorname{Gr}_{#1}(#2)}
+
 % GENERAL LINEAR GROUPS
 \newcommand{\GL}[2]{\operatorname{GL}_{#1}(#2)}
 % argument 1 denotes the rank while argument 2 denotes the ground ring
