added a rough proof of Statement 1. Go through this tomorrow and correct and errors/ fill any holes

--- a/preamble.sty
+++ b/preamble.sty
@@ -112,6 +112,7 @@
 % image
 \DeclareMathOperator{\IM}{im}%image
 
+
 % --------------------------------------------- %
 % 				NOTATION					 	  %
 % --------------------------------------------- %
@@ -122,6 +123,9 @@
 \newcommand{\rationals}{\mathbb{Q}}
 \newcommand{\naturals}{\mathbb{N}}
 \newcommand{\field}{\mathbf{k}}
+
+% PROJECTIVE SPACES
+\newcommand{\Proj}{\mathbb{P}}
 
 % GRASSMANNIANS
 \newcommand{\GR}[2][]{\operatorname{Gr}_{#1}(#2)}
